# schellenberg_usb_ma

./: .pre-commit-config.yaml  README.md  hacs.json  pyproject.toml  schellenberg-usb-command-diagnostics.patch  schellenberg-usb-manual-and-diagnostics.patch  schellenberg-usb-menu-labels.patch  schellenberg-usb-pyserial-asyncio-fast.patch  schellenberg-usb-subentry-persistence.patch
custom_components/schellenberg_usb/: __init__.py  api.py  blind_id.py  config_flow.py  const.py  cover.py  identities.py  manifest.json  options_flow_calibration.py  sensor.py  services.yaml  strings.json  switch.py
custom_components/schellenberg_usb/translations/: de.json  en.json  es.json  fr.json
tests/: test_api.py  test_api_extended.py  test_api_messages.py  test_auto_bind_status.py  test_config_flow.py  test_const.py  test_cover.py  test_init.py  test_init_extended.py  test_sensor.py  test_switch.py  test_translations.py
